--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,9 @@
 <resources>
 
     <string name="app_name">A CNC</string>
+    <string name="empty_string"></string>
     <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
+1    <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
