--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">A CNC</string>
     <string name="empty_string"></string>
-    <string name="title_section1">Section 1</string>
+    <string name="file_open">Open file</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
