--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,16 +3,16 @@
 
     <string name="app_name">A CNC</string>
     <string name="empty_string"></string>
+    <string name="edit_text">Edit G-code text</string>
+    <string name="view_graph">View G-code</string>
+    <string name="edit_graph">Edit G-code</string>
     <string name="file_open">Open file</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_file_dialog">FileDialog</string>
-    <string name="hello_world">Hello world!</string>
     <string name="location">Location</string>
     <string name="cant_read_folder">folder can\'t be read!</string>
     <string name="nnew">New</string>
