arguments tags moved in string resource file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="view_graph">View G-code</string>
     <string name="edit_graph">Edit G-code</string>
     <string name="file_open">Open file</string>
+    <string name="SOURCE_TEXT">G_code_source</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
