--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,9 @@
     <string name="err">Error</string>
     <string name="title_activity_cnccontrol">CNCControlActivity</string>
     <string name="title_activity_cnccontrol_view">CNCControlViewActivity</string>
+    <string name="title_activity_four_buttons">FourButtonsActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_gcode_text_edit">GcodeTextEditActivity</string>
 
 </resources>
