--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,7 @@
     <string name="PREF_MAX_SECOND_DERIVATIVE">max_second_derivatives</string>
     <string name="PREF_MM_IN_STEP_X">mm_in_step_x</string>
     <string name="PREF_MM_IN_STEP_Y">mm_in_step_y</string>
+    <string name="THC_service_label">THC service</string>
+    <string name="MC_service_label">Motion controller service</string>
 
 </resources>
